# sok-ldp-data-analysis

./: .gitignore  .ruff.toml  ARTIFACT-EVALUATION.md  LICENSE  README.md  _tasks.py  pyproject.toml
experiments/: __init__.py  preprocess_results.py  run_mean_rr.py  run_simulation.py
plotting/: paper.mplstyle  plot_paper.py  plot_paper_datasets.py  plot_paper_fo.py  plot_paper_mean.py  plot_paper_mean_multi.py  plot_paper_variance.py
sok_ldp_analysis/: __init__.py
sok_ldp_analysis/ldp/: __init__.py
sok_ldp_analysis/ldp/distribution/: util.py
sok_ldp_analysis/ldp/distribution/density/: density.py  duchi2018.py
sok_ldp_analysis/ldp/distribution/frequency/: d_randomized_response.py  duchi2013.py  frequency_oracle.py  k_subset.py  kairouz2016.py  murakami2018.py  nguyen2016.py  pure_fo.py
sok_ldp_analysis/ldp/distribution/histogram/: ding2017.py  duchi2013.py  fo_histogram.py  histogram.py
sok_ldp_analysis/ldp/mean/: __init__.py  ding2017.py  duchi2018.py  gaboardi2019.py  joseph2019.py  laplace.py  mean.py  mean_ci.py  nguyen2016harmony.py  variance.py  wang2019.py  waudby_smith2023.py
sok_ldp_analysis/simulation/: processing.py  processing_fo.py  simulation.py  simulation_fo.py  simulation_mean.py  simulation_mean_gaussian.py  simulation_mean_multi.py  simulation_variance.py
sok_ldp_analysis/simulation/data/: real.py  synthetic.py  synthetic_continuous.py  synthetic_discrete.py  synthetic_gaussian.py
sok_ldp_analysis/simulation/methods/: frequency.py  mean.py  mean_gaussian.py
