[tool.poetry]
name = "sok_ldp_analysis"
version = "0.1.0"
description = ""
authors = ["René Raab <rene.raab@fau.de>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.25.2"
pandas = "^2.1.0"
tqdm = "^4.66.1"
pyarrow = "^15.0.0"
ucimlrepo = "^0.0.3"
seaborn = "^0.13.2"
pure-ldp = "^1.2.0"
scikit-learn = "^1.4.1.post1"
statsmodels = "^0.14.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
poethepoet = "^0.22.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.25.1"
ruff = "^0.0.286"
ipympl = "^0.9.3"
nbstripout = "^0.6.1"
nprr = "^0.1.4"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true



[tool.poe.tasks]
_format_black = "black ."
_format_ruff = "ruff . --fix-only --exit-zero"
format = ["_format_black", "_format_ruff", "_format_black"]
lint = { cmd = "ruff sok_ldp_analysis --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff sok_ldp_analysis --format=github"
_check_black = "black . --check"
ci_check = { sequence = ["_check_black", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov=sok_ldp_analysis --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
version = { script = "_tasks:task_update_version()" }
conf_jupyter = { cmd = "python -m ipykernel install --user --name sok_ldp_analysis", help = "Add a new jupyter kernel for the project." }

remove_jupyter = { cmd = "jupyter kernelspec uninstall sok_ldp_analysis", help = "Remove the project specific jupyter kernel." }
experiment = { script = "_tasks:task_new_experiment()", help = "Create the boilerplate for a new experiment in the experiment subfolder." }
